--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "@prisma/adapter-better-sqlite3": "^6.7.0",
+    "@prisma/extension-accelerate": "^1.3.0",
+    "bcrypt": "^5.1.1",
+    "cookie": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4.1.3",
+    "tsx": "^4.19.4",
     "typescript": "^5"
   }
 }
