--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marielly.com.br",
+  "name": "marielly",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,32 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^3.0.1",
     "@phosphor-icons/react": "^2.1.7",
-    "@prisma/adapter-better-sqlite3": "^6.7.0",
-    "@prisma/extension-accelerate": "^1.3.0",
-    "bcrypt": "^5.1.1",
-    "cookie": "^1.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "next": "15.2.4",
-    "postcss": "^8.5.3",
+    "next": "15.3.2",
+    "notion-to-md": "^3.1.8",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.2",
-    "zod": "^3.24.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "prisma": "^6.7.0",
-    "tailwindcss": "^4.1.3",
-    "tsx": "^4.19.4",
+    "eslint-config-next": "15.3.2",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
